@@ -68,17 +68,23 @@ public class VFSBrowser extends JPanel implements DefaultFocusComponent,
 	 * Open file dialog mode. Equals JFileChooser.OPEN_DIALOG for
 	 * backwards compatibility.
 	 */
-	public static final int OPEN_DIALOG = 0;
+	public static final int OPEN_DIALOG = JFileChooser.OPEN_DIALOG;
 
 	/**
 	 * Save file dialog mode. Equals JFileChooser.SAVE_DIALOG for
 	 * backwards compatibility.
 	 */
-	public static final int SAVE_DIALOG = 1;
+	public static final int SAVE_DIALOG = JFileChooser.SAVE_DIALOG;
 	/**
-	 * Choose directory dialog mode.
+	 * Choose directory in browser mode.
 	 */
+	public static final int DIRECTORY_BROWSER = 4;
+	
+	/** Directory browser mode (obsolete and ambiguous symbol - do not use)
+	    @deprecated use DIRECTORY_BROWSER */
+	@Deprecated
 	public static final int BROWSER_DIALOG = 4;
+	
 	/**
 	 * Choose directory dialog mode.
 	 */
@@ -1046,7 +1052,7 @@ public class VFSBrowser extends JPanel implements DefaultFocusComponent,
 			return getSelectedFiles();
 		}
 	} //}}}
-	
+
 	//{{{ paste() method
 	/**
 	 * Paste the file contained in the clipboard.
@@ -1219,7 +1225,7 @@ check_selected: for(int i = 0; i < selectedFiles.length; i++)
 					if (selectedFiles.length == 1)
 						setDirectory(file.getPath());
 			}
-			else if(this.mode == BROWSER || this.mode == BROWSER_DIALOG)
+			else if(this.mode == BROWSER || this.mode == DIRECTORY_BROWSER)
 			{
 				if(mode == M_INSERT)
 				{
@@ -1242,7 +1248,7 @@ check_selected: for(int i = 0; i < selectedFiles.length; i++)
 						file.getPath(),false,props);
 				}
 				else if(doubleClickClose && canDoubleClickClose
-					&& this.mode != BROWSER_DIALOG
+					&& this.mode != DIRECTORY_BROWSER
 					&& selectedFiles.length == 1)
 				{
 					// close if this buffer is currently
@@ -1825,7 +1831,7 @@ check_selected: for(int i = 0; i < selectedFiles.length; i++)
 				}
 			}
 		} //}}}
-		
+
 		//{{{ Action class
 		class Action extends AbstractAction
 		{
@@ -1913,7 +1919,7 @@ check_selected: for(int i = 0; i < selectedFiles.length; i++)
 		} //}}}
 
 		void doPopup()
-		{	
+		{
 			if (popup==null) createPopupMenu();
 			GUIUtilities.showPopupMenu(popup, this, 0, getHeight(), false);
 		}
